cabal-version:      3.0
name:               CryptoQuotes
version:            0.1.0.0
synopsis:           Project for a project

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jim Aven
maintainer:         jimaven@duck.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

executable CryptoQuotes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , text 
                    , bytestring
                    , time
                    , fmt
                    , colonnade
                    , blaze-html
                    , blaze-colonnade
                    , Chart
                    , Chart-diagrams
                    , cassava
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
